# Sandpiper

./: README.md
Sandpiper-backend/: docker-compose.yml  local.env.example  run.sh  run_integration_tests.sh
Sandpiper-backend/common/: app_config.py
Sandpiper-backend/common/models/: todo.py
Sandpiper-backend/common/repositories/: todo.py
Sandpiper-backend/common/services/: auth.py  mailjet_service.py  todo.py
Sandpiper-backend/flask/: pyproject.toml
Sandpiper-backend/flask/app/: __init__.py
Sandpiper-backend/flask/app/helpers/: decorators.py  response.py
Sandpiper-backend/flask/app/migrations/: 0000000006_0000000005_migration.py
Sandpiper-backend/flask/app/views/: __init__.py  person.py  test.py  todo.py
Sandpiper-backend/services/email_transmitter/: config.json
Sandpiper-frontend/: README.md  package-lock.json  package.json
Sandpiper-frontend/src/components/: AppHeader.vue  TodoItem.vue  TodoList.vue
Sandpiper-frontend/src/config/: axios.js
Sandpiper-frontend/src/pages/: ForgotPasswordPage.vue  IndexPage.vue  LoginPage.vue  ProfilePage.vue  SetPasswordPage.vue  SignupPage.vue  TodoPage.vue
Sandpiper-frontend/src/router/: routes.js
Sandpiper-frontend/src/stores/: auth.js  todo.js
